--- a/util/jetty/pom.xml
+++ b/util/jetty/pom.xml
@@ -16,7 +16,8 @@
   <version>1.0.0-SNAPSHOT</version>
 
   <properties>
-    <jetty.version>8.1.22.v20160922</jetty.version>
+    <!--jetty.version>8.1.22.v20160922</jetty.version-->
+    <jetty.version>[9.4.33,)</jetty.version>
   </properties>
 
   <dependencies>
